Introduce driver sign in using discord
